src/objects/CM_Remove_Network_Reasons__c.object
<CustomObject>
    <description>This custom object is used to store all the inactivity reason codes and descriptions</description>
    <fields>
        <fullName>Inactive_Reason_Code__c</fullName>
        <description>Inactive reason code</description>
        <label>Inactive Reason Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason_Description__c</fullName>
        <description>Description associated with Inactive Reason Code</description>
        <label>Inactive Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <description>This is the individual state id codes, also called the corporate code</description>
        <label>Plan Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>&quot;I&quot; for inactive, &quot;A&quot; for active</description>
        <label>Status Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <description>Inactive or Active</description>
        <label>Status Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Remove Network Reasons</label>
    <nameField>
        <label>Remove Network Reasons Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remove Network Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>